--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craftjs/core": "0.1.0-beta.10",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
+    "copy-to-clipboard": "^3.3.1",
+    "lzutf8": "^0.5.6",
+    "material-ui-color-picker": "^3.5.1",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-youtube": "^7.12.0",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
