--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,15 @@
     "copy-to-clipboard": "^3.3.1",
     "lzutf8": "^0.5.6",
     "material-ui-color-picker": "^3.5.1",
+    "mui-colorpicker-button": "^1.0.0",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-soundplayer": "^1.0.5",
     "react-youtube": "^7.12.0",
+    "soundcloud-audio": "^1.4.0",
     "styled-components": "^5.1.1"
   },
   "scripts": {
