--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,22 @@
     "@craftjs/core": "0.1.0-beta.10",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@mui-treasury/styles": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.3.1",
+    "hookrouter": "^1.2.3",
     "lzutf8": "^0.5.6",
     "material-ui-color-picker": "^3.5.1",
     "mui-colorpicker-button": "^1.0.0",
+    "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-soundplayer": "^1.0.5",
     "react-youtube": "^7.12.0",
