--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,9 @@
     "react-color": "^2.18.1",
     "react-contenteditable": "^3.3.5",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
+    "react-flip-move": "^3.0.4",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-soundplayer": "^1.0.5",
