--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "dependencies": {
     "@craftjs/core": "0.1.0-beta.10",
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@mui-treasury/styles": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.3.1",
+    "font-picker-react": "^3.5.2",
     "hookrouter": "^1.2.3",
     "lzutf8": "^0.5.6",
     "material-ui-color-picker": "^3.5.1",
     "mui-colorpicker-button": "^1.0.0",
+    "node-sass": "^4.14.1",
     "pure-react-carousel": "^1.27.1",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
@@ -23,6 +29,7 @@
     "react-dom": "^16.13.1",
     "react-draggable": "^4.4.3",
     "react-flip-move": "^3.0.4",
+    "react-image": "^4.0.3",
     "react-images-upload": "^1.2.8",
     "react-player": "^2.6.1",
     "react-router-dom": "^5.2.0",
@@ -30,7 +37,8 @@
     "react-soundplayer": "^1.0.5",
     "react-youtube": "^7.12.0",
     "soundcloud-audio": "^1.4.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "uigradients": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
