--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,25 +4,32 @@
   "private": true,
   "dependencies": {
     "@craftjs/core": "0.1.0-beta.10",
+    "@craftjs/layers": "0.1.0-beta.11",
+    "@date-io/date-fns": "^1.3.13",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
+    "@mui-treasury/components": "^1.9.1",
     "@mui-treasury/styles": "^1.13.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "copy-to-clipboard": "^3.3.1",
+    "date-fns": "^2.16.1",
     "font-picker-react": "^3.5.2",
     "hookrouter": "^1.2.3",
+    "isomorphic-react-fittext": "^1.3.2",
     "lzutf8": "^0.5.6",
     "material-ui-color-picker": "^3.5.1",
     "mui-colorpicker-button": "^1.0.0",
     "node-sass": "^4.14.1",
     "pure-react-carousel": "^1.27.1",
+    "re-resizable": "^6.5.5",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-contenteditable": "^3.3.5",
